<resources>
    <string name="app_name">ForeverGems</string>
    <string name="splash">Splash</string>
    <string name="loginlogo">loginlogo</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="earring">earring</string>
    <string name="finish">Finish</string>
    <string name="csv">CSV</string>
    <string name="bracelets">Bracelets</string>
    <string name="necklaces">Necklaces</string>
    <string name="rings">Rings</string>
    <string name="earrings">Earrings</string>
    <string name="choose_jewelry_type_and_material">Choose Jewelry Type and Material</string>
    <string name="Result">Result....</string>
    <string name="ring_material">Ring \nMaterial:</string>
    <string name="enter_price">Enter Price</string>
    <string name="price">Material \nPrice = ₱</string>
    <string name="gemstone_shape">Gemstone \nShape:</string>
    <string name="gemstone_nprice">Gemstone \nPrice = ₱</string>
    <string name="bracelet_nmaterial">Bracelet \nMaterial:</string>
    <string name="earring_nmaterial">Earring \nMaterial:</string>
    <string name="necklace_nmaterial">Necklace \nMaterial:</string>
    <string name="cal">Cal</string>
    <string name="txt_close">Close</string>
    <string name="txt_result">Jewelry Price</string>
</resources>